[gd_scene load_steps=15 format=2]

[ext_resource path="res://src/Modules/Duck/@Assets/Death/3.png" type="Texture" id=1]
[ext_resource path="res://src/Modules/Duck/@Assets/Death/2.png" type="Texture" id=2]
[ext_resource path="res://src/Modules/Duck/@Assets/Death/1.png" type="Texture" id=3]
[ext_resource path="res://src/Modules/Duck/@Assets/Side/sprite_1.png" type="Texture" id=4]
[ext_resource path="res://src/Modules/Duck/@Assets/Up/sprite_2.png" type="Texture" id=5]
[ext_resource path="res://src/Modules/Duck/@Assets/Up/sprite_1.png" type="Texture" id=6]
[ext_resource path="res://src/Modules/Duck/@Assets/Side/sprite_0.png" type="Texture" id=7]
[ext_resource path="res://src/Modules/Duck/@Assets/Side/sprite_2.png" type="Texture" id=8]
[ext_resource path="res://src/Modules/Duck/@Assets/Up/sprite_0.png" type="Texture" id=9]
[ext_resource path="res://src/Modules/Duck/@Assets/Death/0.png" type="Texture" id=10]
[ext_resource path="res://src/Modules/Duck/@Assets/Scare.png" type="Texture" id=11]
[ext_resource path="res://src/Modules/Duck/Scripts/DuckView.gd" type="Script" id=12]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "death",
"speed": 7.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "scare",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 4 ), ExtResource( 8 ) ],
"loop": true,
"name": "side",
"speed": 7.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "up",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 45.0444

[node name="Duck" type="KinematicBody2D"]
scale = Vector2( 0.8, 0.8 )
script = ExtResource( 12 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "up"
frame = 1
playing = true

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="OnMoveChangeTimer" type="Timer" parent="."]
autostart = true

[node name="OnAnimChangeTimer" type="Timer" parent="."]
autostart = true

[node name="OnDeadTimer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="OnMoveChangeTimer" to="." method="_on_OnMoveChangeTimer_timeout"]
[connection signal="timeout" from="OnAnimChangeTimer" to="." method="_on_OnAnimChangeTimer_timeout"]
[connection signal="timeout" from="OnDeadTimer" to="." method="_on_OnDeadTimer_timeout"]
